--- a/index.html
+++ b/index.html
@@ -330,42 +330,42 @@
 
 							<!-- Start Portfolio Content -->
 							<div class="mu-portfolio-content">
-								<div class="filtr-container">
+								<ul class="filtr-container">
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/mockup01.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
 					                    	<h4 class="mu-filter-item-title">태영건설</h4>
-					                    	<a class="mu-filter-link" href="https://namokbin.github.io/taeyoung/" target="blank"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/mockup01.jpg" title="태영건설"><i class="fa fa-search"></i></a>
+					                    	<a class="mu-filter-link" href="https://namokbin.github.io/taeyoung/" target="blank" title="view site"><i class="fa fa-link"></i></a>
+											<a class="mu-filter-imglink" title="more"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="2">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/mockup02.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
 					                    	<h4 class="mu-filter-item-title">MULAWEAR</h4>
-					                    	<a class="mu-filter-link" href="https://namokbin.github.io/mulawear/" target="blank"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/mockup02.jpg" title="MULAWEAR"><i class="fa fa-search"></i></a>
+					                    	<a class="mu-filter-link" href="https://namokbin.github.io/mulawear/" target="blank" title="view site"><i class="fa fa-link"></i></a>
+					                    	<a class="mu-filter-imglink" title="more"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/mockup03.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
 					                    	<h4 class="mu-filter-item-title">한화손해사정</h4>
-					                    	<a class="mu-filter-link" href="https://namokbin.github.io/hanwhasonsa/" target="blank"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/mockup03.jpg" title="한화손해사정 DESIGN"><i class="fa fa-search"></i></a>
+					                    	<a class="mu-filter-link" href="https://namokbin.github.io/hanwhasonsa/" target="blank" title="view site"><i class="fa fa-link"></i></a>
+					                    	<a class="mu-filter-imglink" title="more"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 									<!--
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-4.jpeg" alt="image">
 					                	</div>
@@ -374,9 +374,9 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-4.jpeg" title="MOBILE APP"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-5.jpeg" alt="image">
 					                	</div>
@@ -385,9 +385,9 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-5.jpeg" title="BRANDING"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="6">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-6.jpeg" alt="image">
 					                	</div>
@@ -396,9 +396,9 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-6.jpeg" title="MARKETING"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="1">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-7.jpg" alt="image">
 					                	</div>
@@ -407,9 +407,9 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-7.jpg" title="WEB DEVELOPMENT"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-8.jpeg" alt="image">
 					                	</div>
@@ -418,9 +418,9 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-8.jpeg" title="MOBILE APP"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </div>
+					                </li>
 
-					                <div class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3">
+					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="3">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-9.jpeg" alt="image">
 					                	</div>
@@ -429,10 +429,42 @@
 					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
 					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-9.jpeg" title="GRAPHICS DESIGN"><i class="fa fa-search"></i></a>
 					                    </div>
-									</div>
+									</li>
 									-->
 
-					            </div>
+								</ul>
+								
+								<ol>
+									<li>
+										<a href="#" title="닫기">x</a>
+										<a href="https://namokbin.github.io/taeyoung/" target="blank" title="view site">GO</a>
+										<div class="con">
+											<div class="txt_box">
+												<h5>태영건설</h5>
+												<p>
+													<span>기여도 :</span> 개인작업, 퍼블리싱 100%<br>
+													<span>제작페이지 :</span> MAIN PAGE<br>
+													<span>TOOL :</span><br>
+													<br>
+													태영건설의 메인 페이지를 구현해 보았습니다. 
+
+												</p>
+											</div>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj01_img01.jpg" alt="태영건설 메인 이미지">
+												<img src="assets/images/portfolio/pj01_js01.jpg" alt="슬라이드 코드01">
+											</div>
+											<p>
+												메인 슬라이드 이벤트는 변수 nowIdx를 만들고 조건문 if를 사용하여 다음순서의 슬라이드를 구할 수 있게 제작하였고,<br>
+												li에 .on을 붙였다 떼는 방식을 선택하여 fadeIn, fadeOut으로 구현하였습니다. 함수 autoPlay에 setInterval을 사용하여 무한반복이 가능합니다.
+											</p>
+											<div class="frame">
+													<img src="assets/images/portfolio/pj01_img01.jpg" alt="태영건설 메인 이미지">
+													<img src="assets/images/portfolio/pj01_js01.jpg" alt="슬라이드 코드01">
+											</div>
+										</div>
+									</li>
+								</ol>
 							</div>
 							<!-- End Portfolio Content -->
 
