--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>portfolio</title>
+    <title>NAM OK BIN PORTFOLIO</title>
     <!-- Favicon -->
     <link rel="shortcut icon" type="image/icon" href="assets/images/favicon.ico"/>
     <!-- Font Awesome -->
@@ -194,6 +194,7 @@
 					</div>
 				</div>
 			</div>
+            </div>
 		</section>
 		<!-- End About -->
 
@@ -451,19 +452,120 @@
 												</p>
 											</div>
 											<div class="frame">
-												<img src="assets/images/portfolio/pj01_img01.jpg" alt="태영건설 메인 이미지">
+												<img src="assets/images/portfolio/pj01_img01.jpg" alt="태영건설 메인 슬라이드 이미지">
 												<img src="assets/images/portfolio/pj01_js01.jpg" alt="슬라이드 코드01">
 											</div>
 											<p>
-												메인 슬라이드 이벤트는 변수 nowIdx를 만들고 조건문 if를 사용하여 다음순서의 슬라이드를 구할 수 있게 제작하였고,<br>
+												메인 슬라이드 이벤트는 변수 nowIdx를 만들고 조건문 if를 사용하여 다음순서의 슬라이드를 구할 수 있게 제작하였으며,<br>
 												li에 .on을 붙였다 떼는 방식을 선택하여 fadeIn, fadeOut으로 구현하였습니다. 함수 autoPlay에 setInterval을 사용하여 무한반복이 가능합니다.
 											</p>
 											<div class="frame">
-													<img src="assets/images/portfolio/pj01_img01.jpg" alt="태영건설 메인 이미지">
-													<img src="assets/images/portfolio/pj01_js01.jpg" alt="슬라이드 코드01">
+												<img src="assets/images/portfolio/pj01_img02.jpg" alt="태영건설 비즈니스 슬라이드 이미지">
+												<img src="assets/images/portfolio/pj01_js02.jpg" alt="슬라이드 코드02">
 											</div>
+											<p>
+												BUSINESS 슬라이드는 이전버튼과 다음버튼이 존재하며 페이지네이션과 카운터가 함께 움직여야하는 슬라이드입니다.<br>
+												이전버튼과 다음버튼을 클릭하는 이벤트를 만들었으며, 슬라이드의 width값 만큼 이동할 수 있게끔 animate를 활용하였습니다.<br>
+												각각 prependTo와 appendTo를 활용하여 맨 처음과 마지막 슬라이드에서도 자연스럽게 넘어갈 수 있는 슬라이드를 제작하였습니다.<br>
+												페이지네이션은 .on을 붙였다 떼는 방식으로 움직이며, 카운터는 text를 이용하여 현재 인덱스에 +1를 하여 표현하였습니다.
+												
+											</p>											
 										</div>
 									</li>
+									<li>
+										<a href="#" title="닫기">x</a>
+										<a href="https://namokbin.github.io/mulawear/" target="blank" title="view site">GO</a>
+										<div class="con">
+											<div class="txt_box">
+												<h5>뮬라웨어</h5>
+												<p>
+													<span>기여도 :</span> 개인작업, 퍼블리싱 100%<br>
+													<span>제작페이지 :</span> MAIN PAGE<br>
+													<span>TOOL :</span><br>
+													<br>
+													뮬라웨어의 메인 페이지를 구현해 보았습니다. 
+
+												</p>
+											</div>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj02_img01.jpg" alt="뮬라웨어 메인 슬라이드 이미지">
+												<img src="assets/images/portfolio/pj02_js01.jpg" alt="슬라이드 코드01">
+											</div>
+											<p>
+												메인슬라이드는 이전버튼과 다음버튼이 존재하며 상단의 배너와 함께 움직여야하는 슬라이드입니다.<br>
+												이전버튼과 다음버튼을 클릭하는 이벤트를 만들었으며, 슬라이드의 hight값 만큼 이동할 수 있게끔 animate를 활용하였습니다.<br>
+												각각 prependTo와 appendTo를 활용하여 맨 처음과 마지막 슬라이드에서도 자연스럽게 넘어갈 수 있는 슬라이드를 제작하였습니다.
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj02_img02.jpg" alt="뮬라웨어 컬렉션 슬라이드 이미지">
+												<img src="assets/images/portfolio/pj02_js02.jpg" alt="슬라이드 코드02">
+											</div>
+											<p>
+												COLLECTION 슬라이드도 이전버튼과 다음버튼이 존재하지만, 2개의 리스트가 함께 움직이는 슬라이드입니다.<br>
+												이전버튼과 다음버튼을 클릭하는 이벤트를 만들었으며, 2개의 슬라이드의 width값 만큼 이동할 수 있게끔 animate를 활용하였습니다.<br>
+												각각 prependTo와 appendTo를 활용하여 맨 처음과 마지막 슬라이드에서도 자연스럽게 넘어갈 수 있는 슬라이드를 제작하였습니다.
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj02_img03.jpg" alt="뮬라웨어 상품이미지">
+												<img src="assets/images/portfolio/pj02_js03.jpg" alt="슬라이드 코드03">
+											</div>
+											<p>
+                                                상품리스트는 웹접근성을 고려하여 li태그의 자식요소로 figure태그와 figcaption태그를 사용하였습니다.<br>
+											</p>																						
+										</div>
+									</li>
+                                    <li>
+										<a href="#" title="닫기">x</a>
+										<a href="https://namokbin.github.io/hanwhasonsa/" target="blank" title="view site">GO</a>
+										<div class="con">
+											<div class="txt_box">
+												<h5>한화손해사정</h5>
+												<p>
+													<span>기여도 :</span> 개인작업, 퍼블리싱 100%<br>
+													<span>제작페이지 :</span> MAIN PAGE<br>
+													<span>TOOL :</span><br>
+													<br>
+													한화손해사정의 메인 페이지를 구현해 보았습니다. 
+
+												</p>
+											</div>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj03_img01.jpg" alt="한화손해사정 메인 슬라이드 이미지">
+												<img src="assets/images/portfolio/pj03_js01.jpg" alt="슬라이드 코드01">
+											</div>
+											<p>
+                                                한화손해사정의 메인슬라이드는 현재 슬라이드에서 다음 슬라이드로 넘어갈 때, 이미지와 텍스트의 css가 변화하는 형태입니다.<br>
+                                                autoPlay()함수를 만들어 .on의 유무에 따라 이미지의 css가 바뀌는 것을 JSON방식을 활용하여 transform과 opacity 값을 변경하였으며,<br>
+                                                슬라이드가 넘어갈때 변화하는 텍스트의 css는 txt()와 reset()함수를 만들어 autoPlay() 함수안에 적용하였습니다.
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj03_img02.jpg" alt="한화손해사정 카운터 이미지">
+												<img src="assets/images/portfolio/pj03_js02.jpg" alt="카운터 코드02">
+											</div>
+											<p>
+												counter_wrap의 숫자들은 카운트업이 되는 동시에 좌측에서 우측으로 나타나는 방식으로 animate를 활용하였습니다.<br>
+                                                차례대로 하나씩 나타나는 형식이기 때문에 css에서 순서대로 각각 transition-delay 걸어주어 시간차를 주었습니다.<br>
+                                                counter_wrap이 보일때만 활성화가 될 수 있는 scroll이벤트를 만들었고, 일정 scrollTop 값이 되면 카운터가 리셋되는 형식으로 제작했습니다.
+
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj03_img03.jpg" alt="한화손해사정 business슬라이드 이미지">
+												<img src="assets/images/portfolio/pj03_js03.jpg" alt="business슬라이드 코드03">
+												<img src="assets/images/portfolio/pj03_js04.jpg" alt="business슬라이드 코드04">
+											</div>
+											<p>
+                                                business슬라이드 부분은 한 슬라이드에 총 3개의 이미지를 사용하여 슬라이드의 상태에 따라 이미지 효과를 다르게 주는 방식입니다.<br>
+                                                mouseenter가 되었을 때와 mouseleave가 되었을 때 그리고 현재 보이는 슬라이드가 아닐 때 총 3개의 이미지를 각각 넣어 코드를 작성하였습니다.
+											</p>
+                                            <div class="frame">
+												<img src="assets/images/portfolio/pj03_img04.jpg" alt="한화손해사정 채용 이미지">
+												<img src="assets/images/portfolio/pj03_js05.jpg" alt="business슬라이드 코드05">
+											</div>
+											<p>
+                                                recruit_wrap에서도 scroll이벤트를 주어 특정scrollTop값이 되었을 때, 활성화게 될 수 있는 코드를 제작하였습니다.
+											</p>																						
+										</div>
+									</li>									
 								</ol>
 							</div>
 							<!-- End Portfolio Content -->
