포트폴리오 추가

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
 											<span class="mu-service-icon-box">
 												<i class="ability_icon uxui"></i>
 											</span>
-											<h4>UI/UX DESIGN</h4>
+											<h4>UI / UX DESIGN</h4>
 											<p>사용자에게 만족스러운 경험을 제공하는<br>
 												UI 디자인을 설계할 수 있습니다.</p>
 										</div>
@@ -259,7 +259,7 @@
 											<span class="mu-service-icon-box">
 												<i class="ability_icon responsive"></i>
 											</span>
-											<h4>CSS & RWD</h4>
+											<h4>CSS / RWD</h4>
 											<p>스타일링을 통한 구조와 표현의 완벽한 분리와<br>
 											   모든 기기에 최적화된 반응형웹 제작이 가능합니다.</p>
 										</div>
@@ -272,7 +272,7 @@
 											<span class="mu-service-icon-box">
 												<i class="ability_icon Javascript"></i>
 											</span>
-											<h4>Javascript & jQuery</h4>
+											<h4>Javascript / jQuery</h4>
 											<p>제작한 HTML, CSS를 바탕으로 동적 기능을<br>구현할 수 있는 프로그래밍 능력이 겸비되어있습니다.</p>
 										</div>
 									</div>
@@ -365,18 +365,19 @@
 					                    	<a class="mu-filter-imglink" title="more"><i class="fa fa-search"></i></a>
 					                    </div>
 					                </li>
-									<!--
+
 					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="4">
 					                	<div class="mu-item-thumbonail">
-					                		<img class="img-responsive" src="assets/images/portfolio/img-4.jpeg" alt="image">
+					                		<img class="img-responsive" src="assets/images/portfolio/mockup04.jpg" alt="image">
 					                	</div>
 					                	<div class="mu-filter-item-content">
-					                    	<h4 class="mu-filter-item-title">MOBILE APP</h4>
-					                    	<a class="mu-filter-link" href="#"><i class="fa fa-link"></i></a>
-					                    	<a class="mu-filter-imglink" href="assets/images/portfolio/img-4.jpeg" title="MOBILE APP"><i class="fa fa-search"></i></a>
+					                    	<h4 class="mu-filter-item-title">현대그룹</h4>
+					                    	<a class="mu-filter-link" href="https://namokbin.github.io/hyundai/" target="blank" title="view site"><i class="fa fa-link"></i></a>
+					                    	<a class="mu-filter-imglink" title="more"><i class="fa fa-search"></i></a>
 					                    </div>
-					                </li>
-
+									</li>
+									
+									<!--
 					                <li class="col-xs-6 col-sm-4 col-md-4 filtr-item" data-category="5">
 					                	<div class="mu-item-thumbonail">
 					                		<img class="img-responsive" src="assets/images/portfolio/img-5.jpeg" alt="image">
@@ -565,7 +566,59 @@
                                                 recruit_wrap에서도 scroll이벤트를 주어 특정scrollTop값이 되었을 때, 활성화게 될 수 있는 코드를 제작하였습니다.
 											</p>																						
 										</div>
-									</li>									
+									</li>
+                                    <li>
+										<a href="#" title="닫기">x</a>
+										<a href="https://namokbin.github.io/hanwhasonsa/" target="blank" title="view site">GO</a>
+										<div class="con">
+											<div class="txt_box">
+												<h5>현대그룹</h5>
+												<p>
+													<span>기여도 :</span> 개인작업, 퍼블리싱 100%<br>
+													<span>제작페이지 :</span> MAIN PAGE<br>
+													<span>TOOL :</span><br>
+													<br>
+													한화손해사정의 메인 페이지를 구현해 보았습니다. 
+
+												</p>
+											</div>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj03_img01.jpg" alt="한화손해사정 메인 슬라이드 이미지">
+												<img src="assets/images/portfolio/pj03_js01.jpg" alt="슬라이드 코드01">
+											</div>
+											<p>
+                                                한화손해사정의 메인슬라이드는 현재 슬라이드에서 다음 슬라이드로 넘어갈 때, 이미지와 텍스트의 css가 변화하는 형태입니다.<br>
+                                                autoPlay()함수를 만들어 .on의 유무에 따라 이미지의 css가 바뀌는 것을 JSON방식을 활용하여 transform과 opacity 값을 변경하였으며,<br>
+                                                슬라이드가 넘어갈때 변화하는 텍스트의 css는 txt()와 reset()함수를 만들어 autoPlay() 함수안에 적용하였습니다.
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj04_img02.jpg" alt="한화손해사정 카운터 이미지">
+												<img src="assets/images/portfolio/pj03_js02.jpg" alt="카운터 코드02">
+											</div>
+											<p>
+												counter_wrap의 숫자들은 카운트업이 되는 동시에 좌측에서 우측으로 나타나는 방식으로 animate를 활용하였습니다.<br>
+                                                차례대로 하나씩 나타나는 형식이기 때문에 css에서 순서대로 각각 transition-delay 걸어주어 시간차를 주었습니다.<br>
+                                                counter_wrap이 보일때만 활성화가 될 수 있는 scroll이벤트를 만들었고, 일정 scrollTop 값이 되면 카운터가 리셋되는 형식으로 제작했습니다.
+
+											</p>
+											<div class="frame">
+												<img src="assets/images/portfolio/pj03_img03.jpg" alt="한화손해사정 business슬라이드 이미지">
+												<img src="assets/images/portfolio/pj03_js03.jpg" alt="business슬라이드 코드03">
+												<img src="assets/images/portfolio/pj03_js04.jpg" alt="business슬라이드 코드04">
+											</div>
+											<p>
+                                                business슬라이드 부분은 한 슬라이드에 총 3개의 이미지를 사용하여 슬라이드의 상태에 따라 이미지 효과를 다르게 주는 방식입니다.<br>
+                                                mouseenter가 되었을 때와 mouseleave가 되었을 때 그리고 현재 보이는 슬라이드가 아닐 때 총 3개의 이미지를 각각 넣어 코드를 작성하였습니다.
+											</p>
+                                            <div class="frame">
+												<img src="assets/images/portfolio/pj03_img04.jpg" alt="한화손해사정 채용 이미지">
+												<img src="assets/images/portfolio/pj03_js05.jpg" alt="business슬라이드 코드05">
+											</div>
+											<p>
+                                                recruit_wrap에서도 scroll이벤트를 주어 특정scrollTop값이 되었을 때, 활성화게 될 수 있는 코드를 제작하였습니다.
+											</p>																						
+										</div>
+									</li>																		
 								</ol>
 							</div>
 							<!-- End Portfolio Content -->
